--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <title>Asfak's Resume</title>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=5">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -10,12 +10,13 @@
 body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 .w3-row-padding img {margin-bottom: 12px}
 .bgimg {
-  background-position: left;
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: url('images/pgbg.jpeg');
+  background-image: url('pgbg.png');
   min-height: 100%;
 }
+
 </style>
 <body>
 
@@ -38,22 +39,23 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 </nav>
 
 <!-- Page Content -->
-<div class="w3-main w3-padding-large" style="margin-left:40%">
+<div class="w3-main w3-padding-large" style="margin-left:32%">
 
   <!-- Menu icon to open sidebar -->
   <span class="w3-button w3-top w3-white w3-xxlarge w3-text-grey w3-hover-text-black" style="width:auto;right:0;" onclick="openNav()"><i class="fa fa-bars"></i></span>
 
   <!-- Header -->
-  <header class="w3-container w3-center" style="padding:128px 16px" id="home">
+  <header class="w3-container w3-left" style="padding:2px 2px" position="fixed" z-index="1000" id="home">
     <h1 class="w3-jumbo"><b>ASFAK SHEKH</b></h1>
     <p><b><h2>DevOps Engineer</h2></b></p>
         <button class="w3-button w3-light-grey w3-padding-large w3-margin-top">
       <i class="fa fa-download"></i> 
-      <a href="documents/resume.pdf" download class="button">Download Resume</a>
+      <a href="resume.pdf" download class="button">Download Resume</a>
     </button>
   </header>
   <!-- About Section -->
-  <div class="w3-content w3-justify w3-text-grey w3-padding-32" id="about">
+  <br><br><br><br><br><br><br><br><br><br><br><br>
+  <div class="w3-content w3-justify w3-text-grey w3-padding-4" id="about">
     <h2>About</h2>
     <hr class="w3-opacity">
     <p>I am Asfak Shekh, a seasoned IT professional with a passion for driving innovation through DevOps practices. <br><br>With over a decade of experience in the IT field, I have honed my skills and expertise to become a proficient DevOps engineer.
@@ -105,7 +107,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
       <div class="w3-container w3-center w3-padding-small w3-dark-grey" style="width:50%">50%</div>
     </div>
     <br>
-
+    <h2 class="w3-padding-24">Happy History</h2> 
     <div class="w3-row w3-center w3-dark-grey w3-padding-16 w3-section">
       <div class="w3-quarter w3-section">
         <span class="w3-xlarge">2</span><br>
@@ -136,7 +138,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <!-- End About Section -->
   </div>
   <!-- Contact Section -->
-  <div class="w3-padding-32 w3-content w3-text-grey" id="contact" style="margin-bottom:64px">
+  <div class="w3-padding-8 w3-content w3-text-grey" id="contact" style="margin-bottom:64px">
     <h2>Contact Me</h2>
     <hr class="w3-opacity">
 
@@ -158,7 +160,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <script>
 // Open and close sidebar
 function openNav() {
-  document.getElementById("mySidebar").style.width = "15%";
+  document.getElementById("mySidebar").style.width = "50%";
   document.getElementById("mySidebar").style.display = "block";
 }
 function closeNav() {
