--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: url('pgbg.png');
+  background-image: url('images/pgbg.png');
   min-height: 100%;
 }
 
@@ -50,7 +50,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <p><b><h2>DevOps Engineer</h2></b></p>
         <button class="w3-button w3-light-grey w3-padding-large w3-margin-top">
       <i class="fa fa-download"></i> 
-      <a href="resume.pdf" download class="button">Download Resume</a>
+      <a href="documents/resume.pdf" download class="button">Download Resume</a>
     </button>
   </header>
   <!-- About Section -->
